--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "gSOMOs"
-version = "0.2.1"
+version = "0.2.3"
 description = "A Python package to analyze magnetic molecular orbitals (SOMOs) from Gaussian outputs"
 authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@univ-tlse3.fr"}]
 readme = "README.md"
@@ -24,3 +24,11 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["somos"]
+
+[project.urls]
+Homepage = "https://github.com/rpoteau/gSOMOs"
+Documentation = "https://rpoteau.github.io/gSOMOs/"
+
+Repository = "https://github.com/rpoteau/gSOMOs"
+Changelog = "https://github.com/rpoteau/gSOMOs/blob/main/CHANGELOG.md"
+
